fix errorprone error with java 16